--- a/views/filter.ejs
+++ b/views/filter.ejs
@@ -15,7 +15,26 @@
 
     <main>
         <h1>Set Up Filters</h1>
+
+        <form action="/filter" method="post">
+            <label for="country_filter">Country</label>
+            <select name="country_filter" id="country_filter"></select>
+            <label for="type_a_filter">Animal Type</label>
+            <select name="type_a_filter" id="type_a_filter">
+                <option value="Dog">Dog</option>
+                <option value="Cat">Cat</option>
+                <option value="Guinea Pig">Guinea Pig</option>
+                <option value="Fish">Fish</option>
+                <option value="Bunny">Bunny</option>
+                <option value="Bird">Bird</option>
+                <option value="Hamster">Hamster</option>
+                <option value="Hedgehog">Hedgehog</option>
+            </select>
+            <input type="submit" value="Filters Toepassen">
+        </form>
     </main>
+
+    <script src="js/filterscript.js"></script>
 </body>
 
 </html>
