--- a/views/likes.ejs
+++ b/views/likes.ejs
@@ -17,10 +17,12 @@
         <section id="likes">
             <img src="images/previewpic3.jpg" alt="">
             <p><%= likes.name %> & <%= likes.name_a %></p>
-            <img id="arrow" src="images/icon_arrowright.png" alt="">
+            <a href="#"><img id="arrow" src="images/icon_arrowright.png" alt=""></a>
         </section>
         <% }) %>
     </main>
+
+    <script src="js/likesscript.js"></script>
 </body>
 
 </html>
