--- a/views/discover.ejs
+++ b/views/discover.ejs
@@ -15,7 +15,6 @@
 
     <main>
         <h1>Find your match</h1>
-        <% matches.forEach(function(matches){ %>
         <section id="match">
             <div id="profilenav">
                 <a id="hprof" href="#" onclick="HumanProfile();"><img src="images/icon_human.png" alt=""></a>
@@ -43,8 +42,12 @@
                 <p><%= matches.breed_a %></p>  
                 <p><%= matches.bio_a %></p>        
             </div>
+            <form action="/discover" method="post">
+                <input type="text" id="matchid" name="matchid" value="<%= matches._id %>">
+                <button type="submit" id="dislikeknop" formaction="/dislike">Dislike</button>
+                <button type="submit" id="likeknop" formaction="/like">Like</button>
+            </form>
         </section>
-        <% }) %>
     </main>
 
     <script src="js/discoverscript.js"></script>
