--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -20,7 +20,7 @@
             <div id="humanprofileedit">
                 <label for="avatar">Choose a profile picture</label>
                 <input type="file" id="avatar" name="avatar" accept="image/png, image/jpeg" value="<%= profiles.url %>">
-
+                
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name" value="<%= profiles.name %>">
                 <label for="age">Age</label>
@@ -45,8 +45,9 @@
             </div> 
 
             <div id="animalprofileedit">
-                <label for="avatar">Choose a profile picture</label>
-                <input type="file" id="avatar" name="avatar" accept="image/png, image/jpeg" value="<%= profiles.url %>">
+                <label for="avatar_a">Choose a profile picture</label>
+                <input type="file" id="avatar_a" name="avatar_a" accept="image/png, image/jpeg" value="<%= profiles.url_a %>">
+               
 
 
                 <label for="name_a">Name</label>
