--- a/views/makeprofile.ejs
+++ b/views/makeprofile.ejs
@@ -47,8 +47,9 @@
             </div>
 
             <div id="animalprofileedit">
-                <label for="avatar">Kies een profiel foto:</label>
-                <input type="file" id="avatar" name="avatar" accept="image/png, image/jpeg">
+               
+                <label for="avatar_a">Choose a profile picture</label>
+                <input type="file" id="avatar_a" name="avatar_a" accept="image/png, image/jpeg">
 
                 <label for="name_a">Name</label>
                 <input type="text" id="name_a" name="name_a">
