--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -16,7 +16,8 @@
             <a id="aprof" href="#" onclick="AnimalProfile();"><img src="images/icon_animal.png" alt=""></a>
         </div>
         <div id="humanprofile">
-            <img id="previewpic" src="/img /<%=profiles.url %>" alt="profielimg">
+           
+            <img id="previewpic" src="/images/profielfotos/<%=profiles.url %>" alt="profielimg">
 
             <h2 id="h2check"><%= profiles.name %></h2>
             <h3><%= profiles.age %> years old</h3>
@@ -29,7 +30,7 @@
             </ul>
         </div>
         <div id="animalprofile">
-            <img id="previewpic_a" src="/img /<%=profiles.url %>" alt="profielimg">
+            <img id="previewpic_a" src="/images/profielfotos/<%=profiles.url_a %>" alt="profielimg">
 
             <h2><%= profiles.name_a %></h2>
             <h3><%= profiles.age_a %> years old</h3>
