--- a/views/makeprofile.ejs
+++ b/views/makeprofile.ejs
@@ -18,8 +18,14 @@
         </div>
         <form action="/makeprofile" method="post">
             <div id="humanprofileedit">
+                <label for="avatar">Choose a profile picture</label>
+                <input type="file" id="avatar" name="avatar" accept="image/png, image/jpeg">
+               
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name">
+                <label for="confirmName">Confirm name</label>
+                <input type="text" id="confirmName" name="confirmName">
+
                 <label for="age">Age</label>
                 <input type="text" id="age" name="age">
                 <label for="country">Country</label>
@@ -37,13 +43,13 @@
                 </div>
                 <label for="mail">E-mailaddress</label>
                 <input type="text" id="mail" name="mail">
-                <p>Upload Photo (Of you and your pet!)</p>
-                <input type="file" name="photo" id="photo" accept="image/png, image/jpeg, image/gif" onchange="loadFile(event)">
-                <img id="previewphoto" width="292.5">
-                <!-- Bron gebruikt: https://www.webtrickshome.com/forum/how-to-display-uploaded-image-in-html-using-javascript -->
+          
             </div>
 
             <div id="animalprofileedit">
+                <label for="avatar_a">Choose a profile picture</label>
+                <input type="file" id="avatar_a" name="avatar_a" accept="image/png, image/jpeg" >
+              
                 <label for="name_a">Name</label>
                 <input type="text" id="name_a" name="name_a">
                 <label for="age_a">Age</label>
