--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,3 +1,3 @@
 <header>
-	<a href="/home"><img src="images/logowhite.png" alt=""></a>
+	<a href="/home"><img src="/images/logowhite.png" alt=""></a>
 </header>
