--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -1,7 +1,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styleV2.css">
+    <link rel="stylesheet" href="/css/.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="sylesheet" href="/css/styleV2.css">
     
     <title><%= title %></title>
