--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -3,4 +3,4 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/profile.css">
-    <title><%= title %></title>
+    <link rel="stylesheet" href="/css/makeprofile-edit.css">
