--- a/views/discover.ejs
+++ b/views/discover.ejs
@@ -49,8 +49,9 @@
             </form>
         </section>
     </main>
-
+<!-- build:js discoverscript.min.js -->
     <script src="js/discoverscript.js"></script>
+<!-- endbuild -->
 </body>
 
 </html>
