--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -1,5 +1,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--gulp minifying-->
+    <!--build:css css/styles.min.css-->
     <link rel="stylesheet" href="/css/style.css">
+    <!--endbuild-->
     <title><%= title %></title>
