--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,38 +10,38 @@
 
     <%- include('includes/nav'); -%>
 
-    <main class="profile">
-        <section class="profile-nav">
-            <a href="#" class="humanbutton"><img src="/images/icon_human.png" alt=""></a>
-            <a href="#" class="animalbutton"><img src="/images/icon_animal.png" alt=""></a>
-        </section>
-        <section class="profile-human">
-            <img src="/images/profielfotos/<%=profiles.url %>" alt="profielimg">
+    <main>
+        <div id="profilenav">
+            <a id="hprof" href="#" onclick="HumanProfile();"><img src="images/icon_human.png" alt=""></a>
+            <a id="aprof" href="#" onclick="AnimalProfile();"><img src="images/icon_animal.png" alt=""></a>
+        </div>
+        <div id="humanprofile">
+            <img id="previewpic" src="/images/profielfotos/<%=profiles.url %>" alt="profielimg">
 
-            <h2><%= profiles.name %></h2>
+            <h2 id="h2check"><%= profiles.name %></h2>
             <h3><%= profiles.age %> years old</h3>
             <p id="selected"><%= profiles.country %></p>
             <p><%= profiles.bio %></p>
-            <ul>
+            <ul id="interestlist">
                 <% profiles.interests.forEach(function(item){ %>
                     <li><%= item %></li>
                     <% }) %>
             </ul>
-        </section>
-        <section class="profile-animal">
-            <img src="/images/profielfotos/<%=profiles.url_a %>" alt="profielimganimal">
+        </div>
+        <div id="animalprofile">
+            <img id="previewpic_a" src="/images/profielfotos/<%=profiles.url_a %>" alt="profielimg">
 
             <h2><%= profiles.name_a %></h2>
             <h3><%= profiles.age_a %> years old</h3>
             <p><%= profiles.type_a %></p>  
             <p><%= profiles.breed_a %></p>  
             <p><%= profiles.bio_a %></p>        
-        </section>
+        </div>
 
         <button type="button" onclick="location.href='/edit'">Edit Profile</button>
     </main>
 
-    <script src="/js/profilescript.js"></script>
+    <script src="js/profilescript.js"></script>
 </body>
 
 </html>
