buttons werkend krijgen

--- a/views/makeprofile.ejs
+++ b/views/makeprofile.ejs
@@ -13,7 +13,7 @@
     <main>
         <h1>Make Profile</h1>
 
-        <section id="profilenave">
+        <section id="profilenav">
             <a id="hprofe" href="#" onclick="HumanProfileEdit();"><img src="images/icon_human.png" alt=""></a>
             <a id="aprofe" href="#" onclick="AnimalProfileEdit();"><img src="images/icon_animal.png" alt=""></a>
         </section>
