--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -13,13 +13,13 @@
     <main>
         <h1>Edit Profile</h1>
 
-        <section id="profilenave">
-            <a id="hprofe" href="#" onclick="HumanProfileEdit();"><img src="images/icon_human.png" alt=""></a>
-            <a id="aprofe" href="#" onclick="AnimalProfileEdit();"><img src="images/icon_animal.png" alt=""></a>
+        <section id="profilenav">
+            <a class="hprofe" href="#" ><img src="images/icon_human.png" alt=""></a>
+            <a class="aprofe" href="#" ><img src="images/icon_animal.png" alt=""></a>
         </section>
 
         <form action="/edit" method="post">
-            <section id="humanprofileedit">
+            <section class="HumanProfileEdit">
 
                 <h2> Your profile</h2>
 
@@ -50,7 +50,7 @@
                 </div>
             </section>
 
-            <section id="animalprofileedit">
+            <section class="AnimalProfileEdit">
                 <h2>Profile animal</h2>
 
                 <label for="avatar">Choose a profile picture</label>
