--- a/public/css/makeprofile-edit.css
+++ b/public/css/makeprofile-edit.css
@@ -90,17 +90,19 @@ select {
 }
 
 
-.profilenav {
+#profilenav {
     display: flex;
     justify-content: center;
     margin-top: 1em;
 }
 
-.profilenav a {
+#profilenav a {
     padding: 0 1em;
+   
+    
 }
 
-.profilenav a img {
+#profilenav a img {
     max-height: 1.6em;
     opacity: 0.5;
 }
