index page directed to loginpage

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <main>
         <img src="images/indexgraphic.png" alt="">
 
-        <button type="button" onclick="location.href='/makeprofile'">Create Profile</button>
+        <button type="button" onclick="location.href='/login'">Create Profile</button>
     </main>
 </body>
 
