New Profile Pictures Added

--- a/views/discover.ejs
+++ b/views/discover.ejs
@@ -21,7 +21,7 @@
                 <a href="#" class="animalbutton"><img src="/images/icon_animal.png" alt=""></a>
             </section>
             <section class="profile-human">
-                <img src="images/previewpic3.jpg" alt="">
+                <img src="images/profielfotos/<%=matches.url %>" alt="">
 
                 <h2><%= matches.name %></h2>
                 <h3><%= matches.age %> years old</h3>
@@ -34,7 +34,7 @@
                 </ul>
             </section>
             <section class="profile-animal">
-                <img src="images/previewpic3.jpg" alt="">
+                <img src="images/profielfotos/<%=matches.url %>" alt="">
 
                 <h2><%= matches.name_a %></h2>
                 <h3><%= matches.age_a %> years old</h3>
